[gd_scene load_steps=12 format=2]

[ext_resource path="res://Assets/Spnning Orb/Blue/frame 3.png" type="Texture" id=1]
[ext_resource path="res://Assets/Spnning Orb/Blue/frame 6.png" type="Texture" id=2]
[ext_resource path="res://Assets/Spnning Orb/Blue/frame 4.png" type="Texture" id=3]
[ext_resource path="res://Assets/Spnning Orb/Blue/frame 1.png" type="Texture" id=4]
[ext_resource path="res://Assets/Spnning Orb/Blue/frame 5.png" type="Texture" id=5]
[ext_resource path="res://Assets/Spnning Orb/Blue/frame 2.png" type="Texture" id=6]
[ext_resource path="res://Scripts/Speed.gd" type="Script" id=7]
[ext_resource path="res://Assets/sounds/Menu2A.wav" type="AudioStream" id=8]

[sub_resource type="CircleShape2D" id=1]
radius = 123.508

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ ExtResource( 4 ), ExtResource( 6 ), ExtResource( 1 ), ExtResource( 3 ), ExtResource( 5 ), ExtResource( 2 ) ],
"loop": true,
"name": "Spin",
"speed": 10.0
} ]

[sub_resource type="Animation" id=3]
resource_name = "collect"
length = 1.8
tracks/0/type = "value"
tracks/0/path = NodePath("AnimatedSprite:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1.8 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}

[node name="Speed" type="Area2D"]
position = Vector2( 552, 274 )
scale = Vector2( 0.199999, 0.199999 )
script = ExtResource( 7 )
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 2 )
animation = "Spin"

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/collect = SubResource( 3 )

[node name="Timer" type="Timer" parent="."]
wait_time = 2.0

[node name="collectionSound" type="AudioStreamPlayer2D" parent="."]
position = Vector2( -2760.01, -1370.01 )
stream = ExtResource( 8 )
[connection signal="body_entered" from="." to="." method="_on_Speed_body_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
